Add documentation and swagger api
